# mjobs

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  Taskfile.yml  main.spec  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: build.yml
lsf_monitor/: lsf.py  main.py
mjobs/: base.py  cli.py  dashboard.py  lsf.py  main.py  slurm.py
mjobs/core/: __init__.py  factory.py
mjobs/data/: __init__.py  repository.py  slurm_repo.py  test_repo.py
mjobs/models/: __init__.py  job.py
mjobs/widgets/: __init__.py  clickable_path.py  file_viewer.py  job_details.py  jobs_table.py  search_overlay.py
tests/: test_mjobs.py
